.k8s/kubernetes/database-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o .k8s/kubernetes/
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: database
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: mysqluser
        - name: MYSQL_PASSWORD
          value: mysqluser
        - name: MYSQL_ROOT_PASSWORD
          value: mysqlroot
        - name: MYSQL_USER
          value: mysqlusr
        image: mariadb:10.4.13
        name: database
        resources: {}
      restartPolicy: Always
status: {}
