.k8s/kubernetes/drupal-deployement.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o .k8s/kubernetes/
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: drupal
  name: drupal
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: drupal
    spec:
      containers:
        - env:
            - name: DOCUMENTROOT
              value: /var/www/html/web
            - name: ENVIRONMENT
              value: k8s
            - name: SERVERNAME
              value: domain
          image: darkanakin41/kubernetes-playground-nginx
          name: nginx
          ports:
            - containerPort: 80
          resources: { }
          volumeMounts:
            - mountPath: /var/www/html/web/upload
              name: drupal-public
        - env:
            - name: DRUSH_VERSION
              value: "9"
            - name: XDEBUG
              value: "0"
          image: darkanakin41/kubernetes-playground-php
          name: php-fpm
          resources: { }
          volumeMounts:
            - mountPath: /var/www/html/private
              name: drupal-private
            - mountPath: /var/www/html/web/upload
              name: drupal-public
        - image: darkanakin41/kubernetes-playground-redis
          name: redis
          resources: { }
      restartPolicy: Always
      volumes:
        - name: drupal-public
          persistentVolumeClaim:
            claimName: drupal-public
status: { }
