.k8s/kubernetes/varnish-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o .k8s/kubernetes/
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: varnish
  name: varnish
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: varnish
    spec:
      containers:
      - image: darkanakin41/kubernetes-playground-varnish
        name: varnish
        resources: {}
      restartPolicy: Always
status: {}
