.k8s/kubernetes/drupal-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o .k8s/kubernetes/
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    name: drupal
  name: drupal
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 80
  selector:
    name: drupal
status:
  loadBalancer: {}
