.k8s/kubernetes/varnish-ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: varnish-ingress
spec:
  rules:
    - http:
        paths:
          - path: /varnish
            backend:
              serviceName: varnish
              servicePort: 80
